# yarukoto

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  compose.dev.yml  compose.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.prod.sh  entrypoint.sh  manage.py  pyproject.toml
accounts/: forms.py  tests.py  urls.py  validators.py  views.py
django_todo/: asgi.py  auth.py  auth_forms.py  settings.py  urls.py  wsgi.py
info/: urls.py  views.py
info/tests/: __init__.py  test_views.py
shared/: enums.py
templates/: base.html  docs.html
templates/account/: login.html  signup.html
templates/registration/: login.html
templates/static/: style.css
templates/static/favicon/: site.webmanifest
templates/todo/: _pagination.html  _pagination_info.html  _todo_count.html  _todo_focus_item.html  _todo_focus_item_edit.html  _todo_focus_mode.html  _todo_form.html  _todo_form_errors.html  _todo_item.html  _todo_item_edit.html  _todo_list.html  _todo_search.html  todo_list.html
todo/: admin.py  apps.py  forms.py  htmx_responses.py  models.py  params.py  queries.py  services.py  urls.py  views.py
todo/migrations/: 0001_initial.py  0002_todoitem_notes.py  0002_todoitem_todo_user_completed_created_and_more.py  0003_merge_20260122_1525.py
todo/tests/: __init__.py  test_forms.py  test_helpers.py  test_integration.py  test_models.py  test_views.py
todo/views/: __init__.py  create_views.py  delete_views.py  docs.py  focus_views.py  helpers.py  list_views.py  todos.py  update_views.py
utils/: enums.py
(+24 files in other folders)
