[project]
name = "django-todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.3.2",
    "whitenoise>=6.8.0",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=5.2.8",
    "djlint>=1.36.4",
    "ruff>=0.14.10",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = ["allauth.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "django_todo.settings"

[tool.ruff]
# Pythonバージョンのターゲット
target-version = "py312"
# 長い文字列やdocstring等を許容するため、行長を広げる
line-length = 120
# 自動生成されるマイグレーションはLint対象から除外
extend-exclude = ["**/migrations"]

[tool.ruff.lint]
# 主要ルールのみ有効化（必要に応じて調整可能）
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
# テストコードでは未使用変数(F841)を許容
"**/tests/*.py" = ["F841"]
"**/tests/**/*.py" = ["F841"]
